--- a/static/style.css
+++ b/static/style.css
@@ -51,7 +51,7 @@ table{
 #navbar ul li a
 {
     display: block;
-    color: #D3D2B5;
+    color: #130707;
     border-radius: 5px 5px;
     text-align: center;
     padding: 14px 16px;
